makefile compiles in/out features

--- a/Webserver/Makefile
+++ b/Webserver/Makefile
@@ -1,8 +1,16 @@
 TARGET := ALARS_Server 
 
-PI_ENABLE = 0
-EKF_ENABLE = 0
-IMU_ENABLE = 0
+PI_ENABLE=0
+EKF_ENABLE=1
+IMU_ENABLE=1
+PID_ENABLE=1
+SERVO_ENABLE=1
+INV_ENABLE=1
+
+
+
+
+
 
 BUILD_DIR := ./build
 SRC_DIR :=./src 
@@ -10,7 +18,13 @@ SRC_DIR :=./src
 
 LDFLAGS := -lpthread
 
-CXX:=g++-12 -I ./src/
+CXX:=g++-12 
+CXX_FLAGS:=-I ./src/ -DPI_ENABLE=$(PI_ENABLE) \
+					 					 -DEKF_ENABLE=$(EKF_ENABLE) \
+										 -DIMU_ENABLE=$(IMU_ENABLE) \
+										 -DPID_ENABLE=$(PID_ENABLE) \
+										 -DSERVO_ENABLE=$(SERVO_ENABLE) \
+										 -DINV_ENABLE=$(INV_ENABLE)
 
 SRCS:= $(shell find $(SRC_DIR) -name '*.cpp')
 SRCS+= $(shell find ./src/ahrs -name '*.cpp')
@@ -27,8 +41,8 @@ clean:
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%.cpp
 		@mkdir -p $(dir $@)
 			@echo "Building $<"
-				@$(CXX) -c $< -o $@ -g -std=c++20
+				@$(CXX) $(CXX_FLAGS) -c $< -o $@ -g -std=c++20
 
 $(TARGET): $(OBJS)
 		@echo "Linking $(TARGET)"
-			@$(CXX)  -o $@ $^ $(LDFLAGS)  -std=c++20
+			@$(CXX)  $(CXX_FLAGS) -o $@ $^ $(LDFLAGS)  -std=c++20
